--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     .highlight {
         background-color: yellow;
     }
+    h2:first-letter {
+    text-transform: uppercase;
+}
 </style>
 
 <div id="app"></div>
